--- a/css/animation.css
+++ b/css/animation.css
@@ -66,3 +66,16 @@
 	0% { transform: translateY(-2px); }
 	100% { transform: translateY(-4px); }
 }
+
+@keyframes from50to100 {
+	0% { transform: scale(0.5); }
+	100% { transform: scale(1); }
+}
+@keyframes from100to0 {
+	0% {height: 100vh; min-height: 100vh;padding: initial;margin: initial;}
+	100% { height: 0vh;min-height: 0vh;padding: 0;margin: 0;}
+}
+@keyframes bringToLife {
+	from { opacity: 0; transform: scale(0.95); }
+	to { opacity: 1; transform: scale(1); }
+}
