--- a/css/layout.css
+++ b/css/layout.css
@@ -232,6 +232,7 @@ nav a:hover {
 	display: inline-block;
 	animation: blink 1s infinite;
 	color: var(--color-accent);
+	overflow: unset;
 }
 
 .subtitle {
