--- a/css/animation.css
+++ b/css/animation.css
@@ -79,3 +79,14 @@
 	from { opacity: 0; transform: scale(0.95); }
 	to { opacity: 1; transform: scale(1); }
 }
+
+@keyframes bringToLife2 {
+	from { opacity: 0; transform: scale(0.95); transform: translateY(10vh); }
+	to { opacity: 1; transform: scale(1); transform: translateY(0vh); }
+}
+@keyframes bringToLife3 {
+	0% {opacity: 0;filter: blur(5px);}
+	50% {opacity: 1;filter: blur(0px);}
+	60% {opacity: 1;;filter: blur(0px);}
+	100% {filter: blur(5px);}
+}
